src-tauri/check_output.txt
    Checking mua v0.1.0 (/Volumes/Workspace/thought/WebstormProjects/Mua/src-tauri)
warning: unused import: `std::collections::HashMap`
 --> src/core/torrent.rs:3:5
  |
3 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0063]: missing field `torrent_config` in initializer of `DownloadConfig`
  --> src/core/commands/task_commands.rs:28:18
   |
28 |     let config = DownloadConfig {
   |                  ^^^^^^^^^^^^^^ missing `torrent_config`

error[E0599]: no variant or associated item named `io` found for enum `AppError` in the current scope
   --> src/core/commands/task_commands.rs:178:62
    |
178 | ..._err(|e| AppError::io(e.to_string()))?;
    |                       ^^ variant or associated item not found in `AppError`
    |
   ::: src/core/error.rs:11:1
    |
 11 | pub enum AppError {
    | ----------------- variant or associated item `io` not found for this enum
    |
note: if you're trying to build a new `AppError` consider using one of the following associated functions:
      AppError::aria2
      AppError::config
      AppError::task_not_found
      AppError::validation
   --> src/core/error.rs:89:5
    |
 89 |     pub fn aria2<S: Into<String>>(msg: S) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
 93 |     pub fn config<S: Into<String>>(msg: S) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
 97 |     pub fn task_not_found<S: Into<String>>(gid: S) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
101 |     pub fn validation<S: Into<String>>(msg: S) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: there is a method `into` with a similar name, but with different arguments
   --> /rustc/254b59607d4417e9dffbc307138ae5c86280fe4c/library/core/src/convert/mod.rs:455:5

error[E0599]: no variant or associated item named `io` found for enum `AppError` in the current scope
   --> src/core/torrent.rs:49:61
    |
 49 | ..._err(|e| AppError::io(e.to_string()))?;
    |                       ^^ variant or associated item not found in `AppError`
    |
   ::: src/core/error.rs:11:1
    |
 11 | pub enum AppError {
    | ----------------- variant or associated item `io` not found for this enum
    |
note: if you're trying to build a new `AppError` consider using one of the following associated functions:
      AppError::aria2
      AppError::config
      AppError::task_not_found
      AppError::validation
   --> src/core/error.rs:89:5
    |
 89 |     pub fn aria2<S: Into<String>>(msg: S) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
 93 |     pub fn config<S: Into<String>>(msg: S) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
 97 |     pub fn task_not_found<S: Into<String>>(gid: S) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
101 |     pub fn validation<S: Into<String>>(msg: S) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: there is a method `into` with a similar name, but with different arguments
   --> /rustc/254b59607d4417e9dffbc307138ae5c86280fe4c/library/core/src/convert/mod.rs:455:5

Some errors have detailed explanations: E0063, E0599.
For more information about an error, try `rustc --explain E0063`.
warning: `mua` (lib) generated 1 warning
error: could not compile `mua` (lib) due to 3 previous errors; 1 warning emitted
